# ners570-finalproject

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  run_tests.sh  welcome.f90
src/: run.py
src/model/: mod_centered_diff.f90  mod_comp_next_step.f90  mod_initialize.f90  tsunami.f90  welcome.f90
src/processing/: plot.py  plot_tsunami.py  plot_tsunami_parallel.py
src/testing/: run_test.sh  test_mod_centered_diff.f90  test_mod_comp_next_step.f90  test_mod_initialize.f90
src/unit_tests/: CMakeLists.txt
src/unit_tests/test_centered_diff/: CMakeLists.txt  test_centered_diff.f90
tests/: test_mod_comp_next_step.py
